# 5a-mmorpg-server

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
brocker/: Cargo.toml  Dockerfile
brocker/src/: main.rs
client/: Cargo.toml
client/src/: main.rs
fake_shard/: Cargo.toml  Dockerfile
fake_shard/src/: main.rs
fake_spatial/: Cargo.toml
fake_spatial/src/: main.rs
game_server/: Cargo.toml  Dockerfile
game_server/src/: client.rs  env_parameter.rs  inputs.rs  lib.rs  main.rs  schedule_handling.rs  startup_system_info.rs
game_server/src/network/: broker.rs  client.rs  frame.rs  heartbeat.rs  mod.rs  orchestrator.rs
game_sockets/: Cargo.toml
game_sockets/src/: lib.rs
game_sockets/src/protocols/: mod.rs  quic_protocol.rs  tcp_protocol.rs  udp_protocol.rs
gatekeeper/: Cargo.toml  Dockerfile
gatekeeper/src/: main.rs
gatekeeper/src/routes/: health.rs  login.rs  mod.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
network_serialization/: Cargo.toml
network_serialization/src/: base_type.rs  bevy.rs  input.rs  lib.rs  net.rs  packet.rs
network_serialization/src/packets/: broker.rs  game_server.rs  mod.rs  orchestrator.rs  shard.rs  spatial_server.rs  topic.rs
network_serialization/src/tests/: base_type.rs  bevy.rs  mod.rs  net.rs
orchestrator/: Cargo.toml  Dockerfile
orchestrator/src/: heartbeat.rs  listener.rs  main.rs  scaler.rs  startup.rs
orchestrator/src/connections/: broker.rs  mod.rs  redis.rs  shards.rs  spatial.rs
spatial-server/: Cargo.toml  Dockerfile
spatial-server/src/: lib.rs  main.rs  network_connection.rs
spatial-server/src/geometry/: circle.rs  line.rs  mod.rs  position.rs  prelude.rs  rect.rs
spatial-server/src/network_connection/: mod.rs  packet.rs
spatial-server/src/network_object/: entity.rs  mod.rs  shard.rs
spatial-server/src/quad_tree/: mod.rs
