[package]
name = "game_sockets"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
crc32fast = "1.5.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
quinn = { version = "0.10" }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.11"
serde_json = "1.0.149"
