[package]
name = "gatekeeper"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true, features = ["aio"] }
dotenvy = { workspace = true }
axum = "0.8.9"
uuid = { version = "1.23.1", features = [ "v4"] }
