[package]
name = "network_serialization"
version = "0.1.0"
edition = "2024"

[features]
bevy_support = ["dep:bevy"]

[dependencies]
bevy = { workspace = true, optional = true }
bytes = { workspace = true }
thiserror = { workspace = true }
ordered-float = "5.3.0"
int-enum = { workspace = true }

[dev-dependencies]
rand = "0.10.1"
