[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy", features = ["macros"] }
redis = { version = "1.2.1", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
network_serialization = { path = "../network_serialization" }
bytes = "1.11.1"
