[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
redis = { workspace = true }
bytes = { workspace = true }
dotenvy = { workspace = true }
network_serialization = { path = "../network_serialization" }
bollard = "0.21.0"
game_sockets = { path = "../game_sockets" }
int-enum = { workspace = true }
log = "0.4.32"